Add a showCurrentVotes method to SpawnVoteService; #818

--- a/src/main/resources/lang/spawn.properties
+++ b/src/main/resources/lang/spawn.properties
@@ -14,4 +14,4 @@ vote.spawn-item={0} §e({1})
 vote.vote.one=vote
 vote.voted=§aYour vote for {0} §awas recorded.
 vote.vote.many=votes
-vote.see-at-spawn=You can find previews of these maps at spawn.
+vote.see-at-spawn=You can find previews of these maps at spawn and vote using the buttons there.
