--- a/src/main/resources/lang/spawn_de.properties
+++ b/src/main/resources/lang/spawn_de.properties
@@ -14,4 +14,4 @@ vote.spawn-item={0} §e({1})
 vote.vote.many=Stimmen
 vote.vote.one=Stimme
 vote.voted=§aDeine Stimme für {0} §awurde aufgezeichnet.
-vote.see-at-spawn=Am Spawn findest du Bilder von den Maps.
+vote.see-at-spawn=Am Spawn findest du Bilder von den Maps und Knöpfe zum Abstimmen.
