Show current votes in SpawnVoteTask; Fixes #818

--- a/src/main/resources/lang/spawn.properties
+++ b/src/main/resources/lang/spawn.properties
@@ -7,7 +7,7 @@
 #
 bossbar-format=§6Current map: §e{0} §6- next in §e{1} minutes
 vote.chat-reminder=A new map will be selected in {0}. Remember to /cast your vote until then!
-vote.header=You may vote for these maps:
+vote.header=Map Election
 vote.no-spawns=Sorry, there are no maps yet.
 vote.spawn-button=[Vote for this map]
 vote.spawn-item={0} §e({1})
@@ -15,3 +15,4 @@ vote.vote.one=vote
 vote.voted=§aYour vote for {0} §awas recorded.
 vote.vote.many=votes
 vote.see-at-spawn=You can find previews of these maps at spawn and vote using the buttons there.
+vote.no-votes=Nobody voted has cast a vote.
