--- a/src/main/resources/lang/spawn_de.properties
+++ b/src/main/resources/lang/spawn_de.properties
@@ -7,7 +7,7 @@
 #
 bossbar-format=§6Aktuelle Map: §e{0} §6- Nächste in §e{1} Minuten
 vote.chat-reminder=In {0} wird eine neue Map ausgewählt. Vergiss nicht, bis dahin mit /mv zu wählen!
-vote.header=Du kannst diese Maps wählen:
+vote.header=Mapwahl
 vote.no-spawns=Entschuldige, aber es gibt noch keine Maps.
 vote.spawn-button=[Diese Map wählen]
 vote.spawn-item={0} §e({1})
@@ -15,3 +15,4 @@ vote.vote.many=Stimmen
 vote.vote.one=Stimme
 vote.voted=§aDeine Stimme für {0} §awurde aufgezeichnet.
 vote.see-at-spawn=Am Spawn findest du Bilder von den Maps und Knöpfe zum Abstimmen.
+vote.no-votes=Es hat niemand eine Stimme abgegeben.
