--- a/src/main/resources/lang/chat_de.properties
+++ b/src/main/resources/lang/chat_de.properties
@@ -15,4 +15,9 @@ ad.mock-4=Hier könnte Ihre Werbung stehen!
 ad.sender-response=Werbung ist ein Armutszeugnis.
 caps.warn=Bitte nicht alles großschreiben :)
 lag.warn=Bitte keine Lagnachrichten - Das hilft keinem :)
+pm.ad=Bitte keine Werbung in privaten Nachrichten.
+pm.receiver=\ §e[{0}→Dir] §7{1}
+pm.sender=\ §6[Du→{0}] §7{1}
+pm.spam=Bitte in privaten Nachrichten nicht spammen.
+pm.spy=\ §8[{0}→{1}] §7{2}
 spam.warn=Bitte nicht spammen :)
