Add /reply command; #759

--- a/src/main/resources/lang/chat.properties
+++ b/src/main/resources/lang/chat.properties
@@ -20,4 +20,5 @@ pm.receiver=\ §e[{0}→You] §7{1}
 pm.sender=\ §6[You→{0}] §7{1}
 pm.spam=Please do not spam private messages.
 pm.spy=\ §8[{0}→{1}] §7{2}
+reply.no-partner=You have not recently messaged anyone.
 spam.warn=Please, do not spam.
