--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -90,7 +90,7 @@ number.one={0}.
 number.two={0}.
 number.three={0}.
 number.other={0}.
-spawn.stand-still=Du wirst in fünf Sekunden telportiert. Bitte nicht bewegen!
+spawn.stand-still=Du wirst in fünf Sekunden teleportiert. Bitte nicht bewegen!
 spawn.tp-abort=Du konntest nicht stillhalten. Bitte versuche es erneut.
 spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {1}§6. Du wirst teleportiert.
 chat.nobody-hears=Du wirst nicht gehört, weil niemand da ist.
