--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -45,3 +45,5 @@ stats.best-streak-skills=§6Best kill streak: §e{0}§6, §e{1} §6skills resear
 stats.friend-tooltip=§7Click here to see\n\
 §7friend's stats
 kill.assist=You assisted your friend in killing somebody and got {0} Exp.
+stats.top-header=Top 10 Players by Exp
+stats.exp-item=§e#{0} §6{1}: §e{2} §6Exp
