--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -45,3 +45,5 @@ stats.best-streak-skills=§6Beste Killstreak: §e{0}§6, §e{1} §6Skills erfors
 stats.friend-tooltip=§7Hier klicken für die\n\
 §7Stats des Freundes
 kill.assist=Du hast deinem Freund geholfen, jemanden zu töten und bekommst dafür {0} Exp.
+stats.top-header=Top 10 Spieler nach Exp
+stats.exp-item=§e#{0} §6{1}: §e{2} §6Exp
