Refactor /msg to BukkitExecution because Intake sucks at ""

--- a/src/main/resources/lang/cmd.properties
+++ b/src/main/resources/lang/cmd.properties
@@ -17,6 +17,7 @@ lang.en.desc=Changes your language to English
 lang.root.desc=Shows your current language
 menu.info.desc=Shows version info
 menu.root.desc=Shows the main menu
+msg.usage=§c/msg [player] [message...]
 skills.root.desc=Shows skill trees
 splink.link.desc=Links a map vote button
 splink.link.help=Links a button to a\n\
