--- a/src/main/resources/lang/error.properties
+++ b/src/main/resources/lang/error.properties
@@ -15,6 +15,8 @@ friend.pending-request=You still have a pending friend request. You need to canc
  that before you can make a new request.
 friend.self-friend=You may not befriend yourself.
 inv.invalid-slot=Invalid slot ID "{0}".
+no-such-player=There is no such player online.
+player-not-on=This player is not online.
 player.multiple=There are multiple players matching your criteria. Try querying by UUID.
 player.unknown=There is no player matching "{0}".
 reg.already-exists=There is already a {0} with ID "{1}".
