--- a/src/main/resources/lang/error_de.properties
+++ b/src/main/resources/lang/error_de.properties
@@ -15,6 +15,8 @@ friend.pending-request=Du hast noch eine laufende Freundschaftsanfrage. Du musst
  diese zuerst abbrechen, bevor du eine neue verschicken kannst.
 friend.self-friend=Du kannst dich nicht mit dir selber befreunden.
 inv.invalid-slot=Invalide Slot-ID: "{0}"
+no-such-player=Es ist kein solcher Spieler online.
+player-not-on=Dieser Spieler ist nicht online.
 player.multiple=Deine Anfrage trifft auf mehrere Spieler zu. Versuche eine Abfrage nach UUID.
 player.unknown=Dieser Spieler ist unbekannt: "{0}"
 reg.already-exists=Es gibt bereits einen {0} mit der ID "{1}".
