Move /reply to BukkitExecution

--- a/src/main/resources/lang/cmd_de.properties
+++ b/src/main/resources/lang/cmd_de.properties
@@ -18,6 +18,7 @@ lang.root.desc=Zeigt deine aktuelle Sprache
 menu.info.desc=Zeigt Versionsinfo
 menu.root.desc=Zeigt das Hauptmenü
 msg.usage=§c/msg [Spieler] [Nachricht...]
+reply.usage=§c/r [Nachricht...]
 skills.root.desc=Zeigt Skilltrees
 splink.link.desc=Verlinkt einen Mapwahlknopf
 splink.link.help=Verlinkt einen Knopf\n\
