--- a/src/main/resources/lang/cmd.properties
+++ b/src/main/resources/lang/cmd.properties
@@ -18,6 +18,7 @@ lang.root.desc=Shows your current language
 menu.info.desc=Shows version info
 menu.root.desc=Shows the main menu
 msg.usage=§c/msg [player] [message...]
+reply.usage=§c/r [message...]
 skills.root.desc=Shows skill trees
 splink.link.desc=Links a map vote button
 splink.link.help=Links a button to a\n\
