Fix typo in spawn!vote.no-votes

--- a/src/main/resources/lang/spawn.properties
+++ b/src/main/resources/lang/spawn.properties
@@ -15,4 +15,4 @@ vote.vote.one=vote
 vote.voted=§aYour vote for {0} §awas recorded.
 vote.vote.many=votes
 vote.see-at-spawn=You can find previews of these maps at spawn and vote using the buttons there.
-vote.no-votes=Nobody voted has cast a vote.
+vote.no-votes=Nobody has cast a vote.
