--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -75,7 +75,7 @@ stats-link=§7Click here to see\n\
 lang.auto-selected=§4IMPORTANT INFORMATION / WICHTIGE INFORMATION:\n\
 §eWe have detected that your client language is English.\n\
 §eIf you''d like to switch to German, type /lang de\n\
-§eWenn du Expvp auf Deutsch verwenden möchtest, tippe /lang de\n\
+§eUm Expvp auf Deutsch zu verwenden, tippe /lang de\n\
 §6To hide this message, type /lang en
 lang.manual-selected=Your language is English. Type /lang to change.
 lang.current-locale=Your current locale is English.\n\
