Change arrow style in /msg

--- a/src/main/resources/lang/chat_de.properties
+++ b/src/main/resources/lang/chat_de.properties
@@ -16,9 +16,9 @@ ad.sender-response=Werbung ist ein Armutszeugnis.
 caps.warn=Bitte nicht alles großschreiben :)
 lag.warn=Bitte keine Lagnachrichten - Das hilft keinem :)
 pm.ad=Bitte keine Werbung in privaten Nachrichten.
-pm.receiver=\ §e[{0}→Dir] §7{1}
-pm.sender=\ §6[Du→{0}] §7{1}
+pm.receiver=\ §e[{0} ➜ Dir] §7{1}
+pm.sender=\ §6[Du ➜ {0}] §7{1}
 pm.spam=Bitte in privaten Nachrichten nicht spammen.
-pm.spy=\ §8[{0}→{1}] §7{2}
+pm.spy=\ §8[{0} ➜ {1}] §7{2}
 reply.no-partner=Du hast in letzter Zeit niemandem geschrieben.
 spam.warn=Bitte nicht spammen :)
