--- a/src/main/resources/lang/chat.properties
+++ b/src/main/resources/lang/chat.properties
@@ -16,9 +16,9 @@ ad.sender-response=Advertising on other servers isn''t such a nice thing to do, 
 caps.warn=Please, do not capitalise everything.
 lag.warn=Please, no lag messages - these don''t help anyone
 pm.ad=Please do not advertise in private messages.
-pm.receiver=\ §e[{0}→You] §7{1}
-pm.sender=\ §6[You→{0}] §7{1}
+pm.receiver=\ §e[{0} ➜ You] §7{1}
+pm.sender=\ §6[You ➜ {0}] §7{1}
 pm.spam=Please do not spam private messages.
-pm.spy=\ §8[{0}→{1}] §7{2}
+pm.spy=\ §8[{0} ➜ {1}] §7{2}
 reply.no-partner=You have not recently messaged anyone.
 spam.warn=Please, do not spam.
