Fix warning format text not displaying in German locale

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -10,7 +10,7 @@ format.broadcast=§6[§7Exp§6] {0}
 player.prefixed-name={1} {0}
 format.error-internal=§4§lInterner Fehler: §c{0}
 format.error-user=§c§lFehler: §c{0}
-format.warning=§e§lAchtung: §e
+format.warning=§e§lAchtung: §e{0}
 format.result=§e§l➩ §6{0}
 format.result-success=§e§l➩ §a{0}
 format.list-header=§e§l➩ §e{0}
