Make admin chat bypass messages more concise

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -94,5 +94,5 @@ spawn.stand-still=Du wirst in fünf Sekunden teleportiert. Bitte nicht bewegen!
 spawn.tp-abort=Du konntest nicht stillhalten. Bitte versuche es erneut.
 spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {1}§6. Du wirst teleportiert.
 chat.nobody-hears=Du wirst nicht gehört, weil niemand da ist.
-chat.bypass-of=Deine magischen Adminkräfte erlauben dir, {0} zu umgehen.
+chat.bypass-of={0} umgangen.
 
