--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -91,5 +91,5 @@ spawn.stand-still=You'll be teleported in five seconds. Please do not move or do
 spawn.tp-abort=You failed to stand still. Please try again.
 spawn.new-spawn=§6The selected spawn is {0} §6by {1}§6. You''ll be teleported.
 chat.nobody-hears=You are not heard because nobody is there.
-chat.bypass-of=Your magical admin powers allowed you to bypass {0}.
+chat.bypass-of=Bypassed {0}.
 
