Add a /cc command

--- a/src/main/resources/lang/chat.properties
+++ b/src/main/resources/lang/chat.properties
@@ -14,6 +14,8 @@ ad.mock-3=I quite like the builds on this server, good work!
 ad.mock-4=This could be your advertisement!
 ad.sender-response=Advertising on other servers isn''t such a nice thing to do, you know?
 caps.warn=Please, do not capitalise everything.
+cc.admin={0} cleared the global chat.
+cc.broadcast=The global chat has been cleared by staff.
 lag.warn=Please, no lag messages - these don''t help anyone
 pm.ad=Please do not advertise in private messages.
 pm.receiver=\ §e[{0} ➜ You] §7{1}
