--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -92,4 +92,5 @@ spawn.tp-abort=You failed to stand still. Please try again.
 spawn.new-spawn=§6The selected spawn is {0} §6by {1}§6. You''ll be teleported.
 chat.nobody-hears=You are not heard because nobody is there.
 chat.bypass-of=Bypassed {0}.
+no-perm=You do not have permission to do this.
 
