--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -95,4 +95,5 @@ spawn.tp-abort=Du konntest nicht stillhalten. Bitte versuche es erneut.
 spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {1}§6. Du wirst teleportiert.
 chat.nobody-hears=Du wirst nicht gehört, weil niemand da ist.
 chat.bypass-of={0} umgangen.
+no-perm=Das darfst du nicht.
 
