--- a/src/main/resources/lang/chat_de.properties
+++ b/src/main/resources/lang/chat_de.properties
@@ -14,6 +14,8 @@ ad.mock-3=Die Maps sind total gut gebaut!
 ad.mock-4=Hier könnte Ihre Werbung stehen!
 ad.sender-response=Werbung ist ein Armutszeugnis.
 caps.warn=Bitte nicht alles großschreiben :)
+cc.admin={0} hat den globalen Chat geleert.
+cc.broadcast=Der globale Chat wurde geleert.
 lag.warn=Bitte keine Lagnachrichten - Das hilft keinem :)
 pm.ad=Bitte keine Werbung in privaten Nachrichten.
 pm.receiver=\ §e[{0} ➜ Dir] §7{1}
