Add a handler for global mute

--- a/src/main/resources/lang/chat.properties
+++ b/src/main/resources/lang/chat.properties
@@ -16,6 +16,8 @@ ad.sender-response=Advertising on other servers isn''t such a nice thing to do, 
 caps.warn=Please, do not capitalise everything.
 cc.admin={0} cleared the global chat.
 cc.broadcast=The global chat has been cleared by staff.
+glomu.blocked=Sorry, the global chat is currently disabled. {0}
+glomu.reason=Reason: §4{0}
 lag.warn=Please, no lag messages - these don''t help anyone
 pm.ad=Please do not advertise in private messages.
 pm.receiver=\ §e[{0} ➜ You] §7{1}
