--- a/src/main/resources/lang/chat_de.properties
+++ b/src/main/resources/lang/chat_de.properties
@@ -16,6 +16,8 @@ ad.sender-response=Werbung ist ein Armutszeugnis.
 caps.warn=Bitte nicht alles großschreiben :)
 cc.admin={0} hat den globalen Chat geleert.
 cc.broadcast=Der globale Chat wurde geleert.
+glomu.blocked=Entschuldige, aber der Chat is momentan deaktiviert. {0}
+glomu.reason=Grund: §4{0}
 lag.warn=Bitte keine Lagnachrichten - Das hilft keinem :)
 pm.ad=Bitte keine Werbung in privaten Nachrichten.
 pm.receiver=\ §e[{0} ➜ Dir] §7{1}
