Add /glomu command

--- a/src/main/resources/lang/admin.properties
+++ b/src/main/resources/lang/admin.properties
@@ -60,3 +60,5 @@ spawn.link.session-start=Hit the button you want to link now.
 spawn.unlink.session-start=Now hit the button you want to unlink.
 spawn.link.done=Linking successful.
 ignore.inv=Your magical admin powers allowed you to open this inventory.
+glomu.on=You have muted the global chat.
+glomu.off=You have unmuted the global chat.
