--- a/src/main/resources/lang/admin_de.properties
+++ b/src/main/resources/lang/admin_de.properties
@@ -60,3 +60,5 @@ spawn.link.session-start=Betätige jetzt den Knopf, den du verlinken möchtest.
 spawn.unlink.session-start=Betätige jetzt den Knopf, den du entlinken möchtest.
 spawn.link.done=Verlinkung erfolgreich.
 ignore.inv=Deine magischen Adminkräfte haben dir erlaubt, dieses Inventar zu öffnen.
+glomu.on=Du hast den globalen Chat deaktiviert.
+glomu.off=Du hast den globalen Chat wieder aktiviert.
