--- a/src/main/resources/lang/admin.properties
+++ b/src/main/resources/lang/admin.properties
@@ -62,3 +62,4 @@ spawn.link.done=Linking successful.
 ignore.inv=Your magical admin powers allowed you to open this inventory.
 glomu.on=You have muted the global chat.
 glomu.off=You have unmuted the global chat.
+extimes.bypass=Your magical admin powers have allowed you to bypass the ExTimes whitelist.
