--- a/src/main/resources/lang/admin_de.properties
+++ b/src/main/resources/lang/admin_de.properties
@@ -62,3 +62,4 @@ spawn.link.done=Verlinkung erfolgreich.
 ignore.inv=Deine magischen Adminkräfte haben dir erlaubt, dieses Inventar zu öffnen.
 glomu.on=Du hast den globalen Chat deaktiviert.
 glomu.off=Du hast den globalen Chat wieder aktiviert.
+extimes.bypass=Deine magischen Adminkräfte erlauben dir, die ExTimes-Whitelist zu umgehen.
