--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -96,4 +96,10 @@ spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {1}§6. Du wirst teleporti
 chat.nobody-hears=Du wirst nicht gehört, weil niemand da ist.
 chat.bypass-of={0} umgangen.
 no-perm=Das darfst du nicht.
+extimes.kick-today=§cExpvp ist momentan geschlossen.\n\
+§cVersuche es um §4{0} §eUhr erneut.
+extimes.kick-tomorrow=§cExpvp ist momentan geschlossen.\n\
+§cVersuche es morgen um §4{0} §eUhr erneut.
+extimes.kick.unknown=§cExpvp ist momentan geschlossen.\n\
+§cVersuche es später erneut.
 
