Add /ext command

--- a/src/main/resources/lang/admin.properties
+++ b/src/main/resources/lang/admin.properties
@@ -63,3 +63,13 @@ ignore.inv=Your magical admin powers allowed you to open this inventory.
 glomu.on=You have muted the global chat.
 glomu.off=You have unmuted the global chat.
 extimes.bypass=Your magical admin powers have allowed you to bypass the ExTimes whitelist.
+extimes.header-special=Special ExTimes:
+extimes.list-special=§e{0}§6: §e{1}§6-§e{2} §6({3})
+extimes.header-week=ExTimes Monday-Thursday:
+extimes.header-weekend=ExTimes Friday-Sunday:
+extimes.list-dow=§e{0}§6-§e{1} §6({2})
+extimes.added-dow=Successfully added ExTime: {0}-{1}
+extimes.added-special=Successfully added special ExTime: {0}-{1} on {2}
+extimes.removed=Successfully removed.
+extimes.none=No ExTimes saved.
+extimes.no-such=No such ExTime.
