--- a/src/main/resources/lang/admin_de.properties
+++ b/src/main/resources/lang/admin_de.properties
@@ -63,3 +63,13 @@ ignore.inv=Deine magischen Adminkräfte haben dir erlaubt, dieses Inventar zu ö
 glomu.on=Du hast den globalen Chat deaktiviert.
 glomu.off=Du hast den globalen Chat wieder aktiviert.
 extimes.bypass=Deine magischen Adminkräfte erlauben dir, die ExTimes-Whitelist zu umgehen.
+extimes.header-special=Spezifische ExTimes:
+extimes.list-special=§e{0}§6: §e{1}§6-§e{2} §6({3})
+extimes.header-week=ExTimes Montag-Donnerstag:
+extimes.header-weekend=ExTimes Freitag-Sonntag:
+extimes.list-dow=§e{0}§6-§e{1} §6({2})
+extimes.added-dow=ExTime hinzugefügt: {0}-{1}
+extimes.added-special=Spezifische ExTime hinzugefügt: {0}-{1} am {2}
+extimes.removed=Erfolgreich entfernt.
+extimes.none=Keine ExTimes gespeichert.
+extimes.no-such=Keine solche ExTime gefunden.
