--- a/src/main/resources/lang/error.properties
+++ b/src/main/resources/lang/error.properties
@@ -14,7 +14,9 @@ friend.no-request=You don''t have any pending request.
 friend.pending-request=You still have a pending friend request. You need to cancel\
  that before you can make a new request.
 friend.self-friend=You may not befriend yourself.
+index=Invalid index: {0} ({1}
 inv.invalid-slot=Invalid slot ID "{0}".
+invalid-temporal=Invalid date or time: {0} ({1})
 no-such-player=There is no such player online.
 player-not-on=This player is not online.
 player.multiple=There are multiple players matching your criteria. Try querying by UUID.
