--- a/src/main/resources/lang/error_de.properties
+++ b/src/main/resources/lang/error_de.properties
@@ -14,7 +14,9 @@ friend.no-request=Du hast keine laufende Anfrage.
 friend.pending-request=Du hast noch eine laufende Freundschaftsanfrage. Du musst\
  diese zuerst abbrechen, bevor du eine neue verschicken kannst.
 friend.self-friend=Du kannst dich nicht mit dir selber befreunden.
+index=Ungültiger Index: {0} ({1}
 inv.invalid-slot=Invalide Slot-ID: "{0}"
+invalid-temporal=Ungültige Zeit oder ungültiges Datum: {0} ({1})
 no-such-player=Es ist kein solcher Spieler online.
 player-not-on=Dieser Spieler ist nicht online.
 player.multiple=Deine Anfrage trifft auf mehrere Spieler zu. Versuche eine Abfrage nach UUID.
