Fix misspelled language key for extimes unknown kick

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -97,6 +97,6 @@ extimes.kick-today=§cExpvp is currently closed.\n\
 §cTry again at §4{0} §eGMT+1.
 extimes.kick-tomorrow=§cExpvp is currently closed.\n\
 §cTry again tomorrow at §4{0} §eGMT+1.
-extimes.kick.unknown=§cExpvp is currently closed.\n\
+extimes.kick-unknown=§cExpvp is currently closed.\n\
 §cTry again later.
 
