--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -100,6 +100,6 @@ extimes.kick-today=§cExpvp ist momentan geschlossen.\n\
 §cVersuche es um §4{0} §eUhr erneut.
 extimes.kick-tomorrow=§cExpvp ist momentan geschlossen.\n\
 §cVersuche es morgen um §4{0} §eUhr erneut.
-extimes.kick.unknown=§cExpvp ist momentan geschlossen.\n\
+extimes.kick-unknown=§cExpvp ist momentan geschlossen.\n\
 §cVersuche es später erneut.
 
