Fix colours in EXT kick messages

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -96,10 +96,13 @@ spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {1}§6. Du wirst teleporti
 chat.nobody-hears=Du wirst nicht gehört, weil niemand da ist.
 chat.bypass-of={0} umgangen.
 no-perm=Das darfst du nicht.
-extimes.kick-today=§5Expvp ist momentan geschlossen.\n\
-§eVersuche es um §4{0} §eUhr erneut.
-extimes.kick-tomorrow=§4Expvp ist momentan geschlossen.\n\
-§eVersuche es morgen um §4{0} §eUhr erneut.
-extimes.kick-unknown=§4Expvp ist momentan geschlossen.\n\
+extimes.kick-today=\n\
+§4Expvp ist momentan geschlossen.\n\
+§eVersuche es um §6{0} §eUhr erneut.
+extimes.kick-tomorrow=\n\
+§4Expvp ist momentan geschlossen.\n\
+§eVersuche es morgen um §6{0} §eUhr erneut.
+extimes.kick-unknown=\n\
+§4Expvp ist momentan geschlossen.\n\
 §eVersuche es später erneut.
 
