--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -93,10 +93,13 @@ spawn.new-spawn=§6The selected spawn is {0} §6by {1}§6. You''ll be teleported
 chat.nobody-hears=You are not heard because nobody is there.
 chat.bypass-of=Bypassed {0}.
 no-perm=You do not have permission to do this.
-extimes.kick-today=§4Expvp is currently closed.\n\
-§eTry again at §4{0} §eGMT+1.
-extimes.kick-tomorrow=§4Expvp is currently closed.\n\
-§eTry again tomorrow at §4{0} §eGMT+1.
-extimes.kick-unknown=§4Expvp is currently closed.\n\
+extimes.kick-today=\n\
+§4Expvp is currently closed.\n\
+§eTry again at §6{0} §eGMT+1.
+extimes.kick-tomorrow=\n\
+§4Expvp is currently closed.\n\
+§eTry again tomorrow at §6{0} §eGMT+1.
+extimes.kick-unknown=\n\
+§4Expvp is currently closed.\n\
 §eTry again later.
 
