Add type-based TP granting for kills and deaths; #825

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -7,7 +7,7 @@
 #
 kill.broadcast=§7{0} §6killed §7{1}§6.
 tp.status=§aYou now have {0} and will receive the next one after {1}.
-tp.actionbar.gain=§2+ {0}
+tp.actionbar.gain=§2+ {0} §a({1})
 league.WOOD.name=§7[Wooden]
 league.STONE.name=§7[§8Stone§7]
 league.EMERALD.name=§7[§2Emerald§7]
@@ -47,3 +47,8 @@ stats.friend-tooltip=§7Click here to see\n\
 kill.assist=You assisted your friend in killing somebody and got {0} Exp.
 stats.top-header=Top 10 Players by Exp
 stats.exp-item=§e#{0} §6{1}: §e{2} §6Exp
+tp.obj.score=next after {0}
+tp.type.combat=Kills
+tp.type.deaths=Mitleidspunkte für Tode
+tp.type.recent_damage=Kampfaktivität
+tp.type.day_activity=bedingungsloses Grundeinkommen
