--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -7,7 +7,7 @@
 #
 kill.broadcast=§7{0} §6hat §7{1} §6getötet.
 tp.status=§aDu hast jetzt {0} und bekommst nach {1} den nächsten.
-tp.actionbar.gain=§2+ {0}
+tp.actionbar.gain=§2+ {0} §a({1})
 league.WOOD.name=§7[Holz]
 league.STONE.name=§7[§8Stein§7]
 league.EMERALD.name=§7[§2Smaragd§7]
@@ -47,3 +47,8 @@ stats.friend-tooltip=§7Hier klicken für die\n\
 kill.assist=Du hast deinem Freund geholfen, jemanden zu töten und bekommst dafür {0} Exp.
 stats.top-header=Top 10 Spieler nach Exp
 stats.exp-item=§e#{0} §6{1}: §e{2} §6Exp
+tp.obj.score=nächster nach {0}
+tp.type.combat=Kills
+tp.type.deaths=Deaths
+tp.type.recent_damage=Battle Activity
+tp.type.day_activity=Unconditional Basic Income
