--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -52,3 +52,4 @@ tp.type.combat=Kills
 tp.type.deaths=Mitleidspunkte für Tode
 tp.type.recent_damage=Kampfaktivität
 tp.type.day_activity=bedingungsloses Grundeinkommen
+tp.obj.recent_damage=deal ten hearts of damage in five minutes
