--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -5,6 +5,7 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+tp.obj.recent_damage=verteile zehn Herzen Schaden in fünf Minuten
 kill.broadcast=§7{0} §6hat §7{1} §6getötet.
 tp.status=§aDu hast jetzt {0} und bekommst nach {1} den nächsten.
 tp.actionbar.gain=§2+ {0} §a({1})
