--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -53,3 +53,4 @@ tp.type.deaths=Mitleidspunkte für Tode
 tp.type.recent_damage=Kampfaktivität
 tp.type.day_activity=bedingungsloses Grundeinkommen
 tp.obj.recent_damage=deal ten hearts of damage in five minutes
+tp.obj.day_activity=activity
