--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -53,3 +53,4 @@ tp.type.combat=Kills
 tp.type.deaths=Deaths
 tp.type.recent_damage=Battle Activity
 tp.type.day_activity=Unconditional Basic Income
+tp.obj.day_activity=Aktivität
