Fix grammar issues in score!tp.status

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -6,7 +6,7 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 kill.broadcast=§7{0} §6killed §7{1}§6.
-tp.status=§aYou now have {0} and will receive the next one after {1}.
+tp.status=§aYou now have {0}. ({1})
 tp.actionbar.gain=§2+ {0} §a({1})
 league.WOOD.name=§7[Wooden]
 league.STONE.name=§7[§8Stone§7]
