--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -7,7 +7,7 @@
 #
 tp.obj.recent_damage=verteile zehn Herzen Schaden in fünf Minuten
 kill.broadcast=§7{0} §6hat §7{1} §6getötet.
-tp.status=§aDu hast jetzt {0} und bekommst nach {1} den nächsten.
+tp.status=§aDu hast jetzt {0}. ({1})
 tp.actionbar.gain=§2+ {0} §a({1})
 league.WOOD.name=§7[Holz]
 league.STONE.name=§7[§8Stein§7]
